--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="author" content="Nikita-Veselov" />
 
         <title>Wann.fun - short URL's for you</title>
         <!-- Favicon-->
@@ -22,40 +21,39 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="#!">Wann.fun</a>
-                <div class="">
+                <div class="row">
                     <!-- Login form -->
-                    <div class="dropdown dropstart">
+                    <div class="col-6 dropdown dropstart ">
                         <button 
                             class="btn btn-primary dropdown-toggle" 
                             href="#"
-                            id="dropdownMenuClickableInside" 
                             data-bs-toggle="dropdown" 
                             aria-expanded="false"
+                            data-bs-auto-close="outside"
                         >
                             Log In
                         </button>
 
                         <div 
-                            class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start"
-                            aria-labelledby="dropdownMenuClickableInside">
-                            <form class="px-4 py-3" style="min-width: 3em;">
-                            <div class="mb-3">
-                                <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-                            </div>
-                            <div class="mb-3">
-                                <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-                            </div>
-                            <div class="mb-3">
-                                <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="dropdownCheck">
-                                <label class="form-check-label" for="dropdownCheck">
-                                    Remember me
-                                </label>
+                            class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+                            <form class="px-4 py-3" style="width: 15rem;">
+                                <div class="mb-3">
+                                    <label for="DropdownFormLogin" class="form-label">Login</label>
+                                    <input type="email" class="form-control" name="DropdownFormLogin" placeholder="Login">
                                 </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Sign in</button>
+                                <div class="mb-3">
+                                    <label for="DropdownFormPassword" class="form-label">Password</label>
+                                    <input type="password" class="form-control" name="DropdownFormPassword" placeholder="Password">
+                                </div>
+                                <div class="mb-3">
+                                    <div class="form-check">
+                                    <input type="checkbox" class="form-check-input">
+                                    <label class="form-check-label" for="dropdownCheck">
+                                        Remember me
+                                    </label>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Sign in</button>
                             </form>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Forgot password?</a>
@@ -68,32 +66,24 @@
                         <button 
                             class="btn btn-primary dropdown-toggle" 
                             href="#"
-                            id="dropdownMenu2" 
                             data-bs-toggle="dropdown" 
                             aria-expanded="false"
+                            data-bs-auto-close="outside"
                         >
                             Register
                         </button>
 
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
-                            <form class="px-4 py-3">
-                            <div class="mb-3">
-                                <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-                            </div>
-                            <div class="mb-3">
-                                <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-                            </div>
-                            <div class="mb-3">
-                                <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="dropdownCheck">
-                                <label class="form-check-label" for="dropdownCheck">
-                                    Remember me
-                                </label>
+                            <form class="px-4 py-3" style="width: 15rem;">
+                                <div class="mb-3">
+                                    <label for="DropdownFormEmail" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" name="DropdownFormEmail" placeholder="email@example.com">
                                 </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Sign in</button>
+                                <div class="mb-3">
+                                    <label for="DropdownFormPassword" class="form-label">Password</label>
+                                    <input type="password" class="form-control" name="DropdownFormPassword" placeholder="Password">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Sign in</button>
                             </form>
 
                         </div>
