--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet" type="text/css" >
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
-
         <!-- Navigation-->
-        <nav class="navbar navbar-light bg-light static-top">
-            <div class="container">
-                <a class="navbar-brand" href="#!">Wann.fun</a>
+        <nav class="navbar navbar-light bg-light static-top navbar-gradient">
+            <div class="container container-md">
+                <a class="navbar-brand navbar-brand-font" href="#!">Wannfun</a>
                 <div class="row">
                     <!-- Login form -->
-                    <div class="col-6 dropdown dropstart ">
+                    <div class="col-6 dropdown">
                         <button 
                             class="btn btn-primary dropdown-toggle" 
                             href="#"
@@ -35,7 +35,7 @@
                         </button>
 
                         <div 
-                            class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+                            class="dropdown-menu dropdown-menu-md-end dropdown-menu-start">
                             <form class="px-4 py-3" style="width: 15rem;">
                                 <div class="mb-3">
                                     <label for="DropdownFormLogin" class="form-label">Login</label>
@@ -58,11 +58,10 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Forgot password?</a>
                         </div>
-
                     </div>
 
                     <!-- Registration form -->
-                    <div class="col-6 dropdown dropstart">
+                    <div class="col-6 dropdown">
                         <button 
                             class="btn btn-primary dropdown-toggle" 
                             href="#"
@@ -73,7 +72,7 @@
                             Register
                         </button>
 
-                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+                        <div class="dropdown-menu dropdown-menu-end">
                             <form class="px-4 py-3" style="width: 15rem;">
                                 <div class="mb-3">
                                     <label for="DropdownFormEmail" class="form-label">Email address</label>
@@ -85,7 +84,6 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary">Sign in</button>
                             </form>
-
                         </div>
 
                     </div>
@@ -100,12 +98,12 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Create your new short URL!</h1>
-                            <!-- Signup form-->
+                            <h1 class="custom-font mb-5">Create your new short URL!</h1>
+                            <!-- URL form-->
                             <form>
-                                <div class="input-group input-group-lg">
+                                <div class="input-group">
                                     <input 
-                                        class="form-control" 
+                                        class="form-control custom-font" 
                                         type="text" 
                                         placeholder="Enter your URL" 
                                         aria-label="Enter your URL" 
@@ -114,30 +112,29 @@
 
                                     />
 
-                                    <div class="dropdown">
-                                        <button 
-                                            class="btn btn-primary btn-lg dropdown-toggle" 
-                                            type="button" 
-                                            id="dropdownMenuButton1" 
-                                            data-bs-toggle="dropdown" 
-                                            aria-expanded="false"
-                                            data-bs-toggle="tooltip" 
-                                            data-bs-placement="bottom" 
-                                            title="Choose your link part, you can change it in your profile later on!"
-                                        ></button>
+                                    <button 
+                                        class="btn btn-primary btn-lg dropdown-toggle" 
+                                        type="button" 
+                                        id="dropdownMenuButton1" 
+                                        data-bs-toggle="dropdown" 
+                                        aria-expanded="false"
+                                        data-bs-toggle="tooltip" 
+                                        data-bs-placement="bottom" 
+                                        title="Choose your link part, you can change it in your profile later on!"
+                                    ></button>
 
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                            <li><h6 class="dropdown-header">Choose whisely:</h6></li>
-                                            <li><div class="dropdown-item active">Link var1</div></li>
-                                            <li><div class="dropdown-item">Link var2</div></li>
-                                            <li><div class="dropdown-item">Link var3</div></li>
-                                            <li><div class="dropdown-item">Link var4</div></li>
-                                            <li><div class="dropdown-item">Link var5</div></li>
-                                        </ul>
-                                    </div>
+                                    <ul class="ropdown dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li><h6 class="dropdown-header">Choose whisely:</h6></li>
+                                        <li><div class="dropdown-item active">Link var1</div></li>
+                                        <li><div class="dropdown-item">Link var2</div></li>
+                                        <li><div class="dropdown-item">Link var3</div></li>
+                                        <li><div class="dropdown-item">Link var4</div></li>
+                                        <li><div class="dropdown-item">Link var5</div></li>
+                                    </ul>
+                                
 
                                     <button 
-                                        class="btn btn-primary" 
+                                        class="btn btn-primary custom-font" 
                                         id="button-submit" 
                                         type="button" 
                                         onclick="copyToClipboardById('url-form')"
@@ -147,6 +144,7 @@
                                     >
                                         Create
                                     </button>
+
                                 </div>
                             </form>
                         </div>
@@ -162,22 +160,26 @@
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-window m-auto text-primary"></i></div>
-                            <h3>Fully Responsive</h3>
-                            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+                            <h3>Adjustable size</h3>
+                            <p class="lead mb-0">
+                                Your links will look great on any device, no matter the size!
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-layers m-auto text-primary"></i></div>
-                            <h3>Bootstrap 5 Ready</h3>
-                            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 5 framework!</p>
+                            <h3>Statistics ready</h3>
+                            <p class="lead mb-0">
+                                Log in and check the statistics of your link at any time! Including geo, timstamps and more.
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <div class="features-icons-icon d-flex"><i class="bi-terminal m-auto text-primary"></i></div>
                             <h3>Easy to Use</h3>
-                            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+                            <p class="lead mb-0">Ready to use with any of your links or customize it for your personal needs!</p>
                         </div>
                     </div>
                 </div>
@@ -215,7 +217,7 @@
         </section>
 
         <!-- Footer-->
-        <footer class="footer bg-light">
+        <footer class="footer bg-light navbar-gradient">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
